# chatbot-rs

./: Cargo.toml  README.md
src/: chat_gpt_test.rs  load_yaml_test.rs  main.rs
