[package]
name = "chatbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"

actix-web = "4.0.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
